<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"  >
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_text_perfil" />
        <item
            android:id="@+id/nav_ofertas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_text_oferta" />
        <item
            android:id="@+id/nav_postulaciones"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_text_postulaciones" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_text_notificacion" />
        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_text_salir" />
    </group>

</menu>
