<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/img_backgroud_app"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/fab_margin"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/etiq_public_ofert"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:id="@+id/edit_puesto"
                android:hint="@string/hint_puesto"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:inputType="text"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:id="@+id/edit_area"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:inputType="text"
                android:hint="@string/hint_area"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:id="@+id/edit_tipotrabajo"
                android:hint="@string/hint_tipojob"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:text="@string/hint_disponibilidad"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:elevation="2dp"
                    android:id="@+id/spinner_disponibilidad"
                    android:entries="@array/list_disponb"
                    android:background="@android:color/white"
                    android:popupBackground="#FFFFFF"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_sueldooferta"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/hint_sueldo"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_fechainicio"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:imeOptions="actionNext"
                    android:hint="@string/hint_fechainicio"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textColorHint="@android:color/white"
                    android:layout_weight="3"
                    android:enabled="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:layout_weight="1"
                    android:id="@+id/btn_fecha"
                    android:padding="5dp"
                    android:background="@color/colorPrimary"
                    android:tint="@android:color/white"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_ubicacion"
                android:inputType="text"
                android:hint="@string/hint_ubicacion"
                android:imeOptions="actionNext"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/hint_requisitos"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_requisitos"
                android:inputType="textImeMultiLine"
                android:imeOptions="actionNext"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/hint_funciones"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_funciones"
                android:inputType="textImeMultiLine"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/hint_perfil_est"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:elevation="2dp"
                    android:id="@+id/spinner_perfil"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:entries="@array/list_perfil"
                    android:popupBackground="#FFFFFF"
                    android:textAlignment="center"
                    android:spinnerMode="dialog"
                    android:background="@android:color/white"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/hint_sexo"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:layout_weight="1"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:layout_width="0dp"
                    android:elevation="2dp"
                    android:id="@+id/spinner_genero"
                    android:entries="@array/list_genero"
                    android:popupBackground="#FFFFFF"
                    android:textAlignment="center"
                    android:spinnerMode="dialog"
                    android:background="@android:color/white"
                    android:layout_height="wrap_content">

                </Spinner>

            </LinearLayout>

            <TextView
                android:text="@string/hint_ramas"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_ramas"
                android:inputType="textImeMultiLine"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textColorHint="@android:color/white"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_publicar"
                android:text="@string/hint_publicar"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>